Prevent header title from overflowing and bumping subtitle.

--- a/scss/components/_pageHeader.scss
+++ b/scss/components/_pageHeader.scss
@@ -77,6 +77,7 @@
 		font-size: 2.5em;
 		font-weight: bold;
 		margin-bottom: 0;
+		white-space: nowrap;
 
 		@media (#{$bp-larger-than-mobile}) {
 			font-size: 3.33em;
